@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.8.1\...HEAD[Unreleased]
+
+=== Changed
+
+* Change the structure of `Params` ({pull-request-url}/70[#70])
+
 == {compare-url}/v0.8.0\...v0.8.1[0.8.1] - 2023-09-07
 
 === Changed
